[gd_scene load_steps=4 format=3 uid="uid://mnklt76bdhlw"]

[ext_resource type="PackedScene" uid="uid://cu54hxafh2i6t" path="res://Objects/Room_objects/objSignProximity.tscn" id="1_1j0mj"]
[ext_resource type="Script" path="res://Objects/Rnd/room/hint_sign.gd" id="1_liijf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mdn2l"]

[node name="HintSign" type="Node2D"]
script = ExtResource("1_liijf")

[node name="objSignProximity" parent="." instance=ExtResource("1_1j0mj")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mdn2l")

[node name="Arrow" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-2, -18, -2, -18, -2, -12, 2, -12, 2, -18, 5, -18, 0, -26, -5, -18)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
